[Mobile] fix NPE